--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "next": "latest",
     "nprogress": "^0.2.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.7.0",
+    "styled-components": "^5.0.1"
   },
   "license": "ISC"
 }
