--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "next": "latest",
+    "next-images": "^1.3.1",
     "nprogress": "^0.2.0",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.17",
